# label-02339-20260408

./: .gitignore  README.md  run.bat  run.sh  test_server.py
.github/workflows/: build.yml
backend/: CMakeLists.txt  EnvMonitor.pro  init_data.sql  run_tests.sh  schema.sql
backend/cmake/: EnvMonitor.desktop  Info.plist.in  dmg_setup.scpt
backend/resources/: resources.qrc
backend/resources/config/: default.ini
backend/src/: main.cpp  mainwindow.cpp  mainwindow.h
backend/src/core/: dataprocessor.cpp  dataprocessor.h
backend/src/dialogs/: settingsdialog.cpp  settingsdialog.h
backend/src/managers/: configmanager.cpp  configmanager.h  databasemanager.cpp  databasemanager.h  networkmanager.cpp  networkmanager.h  serialmanager.cpp  serialmanager.h
backend/src/models/: sensordata.cpp  sensordata.h
backend/src/utils/: logmanager.cpp  logmanager.h  stringutils.cpp  stringutils.h
backend/src/widgets/: gaugewidget.cpp  gaugewidget.h
backend/tests/: test_config.cpp  test_database.cpp  test_dataprocessor.cpp  test_gaugewidget.cpp  test_integration.cpp  test_network.cpp  test_sensordata.cpp  test_serial.cpp
docs/: project_design.md  user_manual.md
